--- a/app/src/main/res/layout/item_popular_contents.xml
+++ b/app/src/main/res/layout/item_popular_contents.xml
@@ -16,28 +16,29 @@
 
         <ImageView
             android:id="@+id/iv_home_popular_image"
+            imageUrl="@{PopularContentsModel.image}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            imageUrl="@{PopularContentsModel.image}"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/tv_home_popular_ranking"
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:background="@drawable/rectanglewithcorner"
-            android:text="@{PopularContentsModel.rate.toString()}"
-            android:includeFontPadding="false"
-            android:textSize="7sp"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:includeFontPadding="false"
+            android:text="@{PopularContentsModel.rate.toString()}"
             android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.caption01"
+            android:textColor="@color/white"
+            android:textSize="11sp"
             app:layout_constraintStart_toStartOf="@id/iv_home_popular_image"
-            app:layout_constraintTop_toTopOf="@id/iv_home_popular_image"
-            android:textAppearance="@style/TextAppearance.caption01" />
+            app:layout_constraintTop_toTopOf="@id/iv_home_popular_image" />
 
 
         <TextView
@@ -46,10 +47,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
-            android:text="@{PopularContentsModel.title}"
             android:includeFontPadding="false"
-            android:textColor="@color/main_color"
+            android:text="@{PopularContentsModel.title}"
             android:textAppearance="@style/TextAppearance.caption02"
+            android:textColor="@color/main_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_popular_image" />
@@ -60,10 +61,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/black"
-            android:text="@{PopularContentsModel.subTitle}"
             android:includeFontPadding="false"
+            android:text="@{PopularContentsModel.subTitle}"
             android:textAppearance="@style/TextAppearance.caption02"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_home_popular_title"
             app:layout_constraintTop_toBottomOf="@id/iv_home_popular_image" />
