--- a/app/src/main/res/layout/item_color_product.xml
+++ b/app/src/main/res/layout/item_color_product.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                discount="@{BestProductModel.discount}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
+                priceAmount="@{BestProductModel.price}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
